--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.793.0"
+    "aws-sdk": "^2.793.0",
+    "serverless-iam-roles-per-function": "^2.0.2"
   }
 }
